<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context=".Activities.BluetoothActivity">

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="2"
            android:columnCount="3">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_on"
                android:id="@+id/button_on"
                android:layout_row="0"
                android:layout_column="0"
                android:onClick="on" />

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_visible"
                android:id="@+id/button_visible"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="visible" android:layout_gravity="fill"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_devices"
                android:id="@+id/button_list"
                android:layout_row="0"
                android:layout_column="2"
                android:onClick="list"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/turn_off"
                android:id="@+id/button_off"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="off"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover_devices"
                android:id="@+id/button_discover"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="discover"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/button_back"
                android:layout_row="1"
                android:layout_column="2"
                android:onClick="back"/>

    </GridLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_devices"
                android:textColor="#ff34ff06"
                android:textSize="25sp"/>

        <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView"
                android:choiceMode="singleChoice"
                android:layout_below="@+id/textView_devices"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:id="@+id/button_connect"
                android:layout_below="@id/listView"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:onClick="connect"/>
    </RelativeLayout>
</LinearLayout>
