<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_bckgrd"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".Activities.MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title1"
            android:textSize="35sp"
            android:textColor="#ef0000"
            android:id="@+id/title1"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="77dp"
            android:layout_marginStart="35dp"
            android:layout_marginTop="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title2"
            android:textSize="35sp"
            android:textColor="#ef0000"
            android:id="@+id/title2"
            android:layout_below="@+id/title1"
            android:layout_alignLeft="@+id/title1"
            android:layout_alignStart="@+id/title1"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title3"
            android:textSize="35sp"
            android:textColor="#ef0000"
            android:id="@+id/title3"
            android:layout_below="@+id/title2"
            android:layout_alignLeft="@+id/title2"
            android:layout_alignStart="@+id/title2"/>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:indeterminate="false"/>
</RelativeLayout>
